# shomei-memory-verify

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
shomei_memory_verify/: __init__.py  __main__.py  _canonical.py  _jcs.py  receipt.py  receipt_render.py  verify.py
shomei_memory_verify/tests/: test_conformance.py  test_import_guard.py  test_receipt_render.py
shomei_memory_verify/tests/fixtures/: golden_receipt.json
